# cpp_template

./: .clang-format  .gitattributes  .gitignore  CMakeLists.txt  README.md  vcpkg.json
include/: GLSLProgram.h
res/: fragmentshader.frag  triangle.frag  triangle.vert  vertexshader.vert
src/: App.cpp  GLSLProgram.cpp  glsl.cpp  test.cpp  test.h
